--- a/eclipse/releng/com.example.binco.eclipse.configuration/pom.xml
+++ b/eclipse/releng/com.example.binco.eclipse.configuration/pom.xml
@@ -13,6 +13,9 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<neon-repo.url>http://download.eclipse.org/releases/neon</neon-repo.url>
 		<scala-ide-repo.url>http://download.scala-ide.org/sdk/lithium/e46/scala211/stable/site</scala-ide-repo.url>
+		<maven-scala-plugin.version>3.2.1</maven-scala-plugin.version>
+		<maven-clean-plugin.version>3.0.0</maven-clean-plugin.version>
+		<scala.version>2.11.8</scala.version>
 	</properties>
 
 	<repositories>
@@ -33,49 +36,92 @@
 		</repository>
 	</repositories>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>tycho-maven-plugin</artifactId>
-				<version>${tycho.version}</version>
-				<extensions>true</extensions>
-			</plugin>
-
-			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>target-platform-configuration</artifactId>
-				<version>${tycho.version}</version>
-				<configuration>
-					<environments>
-						<environment>
-							<os>linux</os>
-							<ws>gtk</ws>
-							<arch>x86</arch>
-						</environment>
-						<environment>
-							<os>linux</os>
-							<ws>gtk</ws>
-							<arch>x86_64</arch>
-						</environment>
-						<environment>
-							<os>win32</os>
-							<ws>win32</ws>
-							<arch>x86</arch>
-						</environment>
-						<environment>
-							<os>win32</os>
-							<ws>win32</ws>
-							<arch>x86_64</arch>
-						</environment>
-						<environment>
-							<os>macosx</os>
-							<ws>cocoa</ws>
-							<arch>x86_64</arch>
-						</environment>
-					</environments>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+       <build>
+             <pluginManagement>
+                    <plugins>
+                           <plugin>
+                                  <groupId>net.alchim31.maven</groupId>
+                                  <artifactId>scala-maven-plugin</artifactId>
+                                  <version>${maven-scala-plugin.version}</version>
+                           </plugin>
+                           <plugin>
+                                  <groupId>org.apache.maven.plugins</groupId>
+                                  <artifactId>maven-clean-plugin</artifactId>
+                                  <version>${maven-clean-plugin.version}</version>
+                           </plugin>
+                    </plugins>
+             </pluginManagement>
+             <plugins>
+                    <plugin>
+                           <groupId>net.alchim31.maven</groupId>
+                           <artifactId>scala-maven-plugin</artifactId>
+                           <version>${maven-scala-plugin.version}</version>
+                           <executions>
+                                  <execution>
+                                        <id>scala-compile-first</id>
+                                        <phase>process-resources</phase>
+                                        <goals>
+                                               <!-- we omit the add-source goal that is described in the maven-scala-plugin
+                                                      documentation -->
+                                               <goal>compile</goal>
+                                        </goals>
+                                  </execution>
+                                  <execution>
+                                        <id>scala-test-compile</id>
+                                        <phase>process-test-resources</phase>
+                                        <goals>
+                                               <goal>testCompile</goal>
+                                        </goals>
+                                  </execution>
+                           </executions>
+                           <configuration>
+                                  <recompileMode>incremental</recompileMode>
+                                  <scalaVersion>${scala.version}</scalaVersion>
+                           </configuration>
+                    </plugin>
+                    <plugin>
+                           <groupId>org.eclipse.tycho</groupId>
+                           <artifactId>tycho-maven-plugin</artifactId>
+                           <version>${tycho.version}</version>
+                           <extensions>true</extensions>
+                           <!--<configuration> <excludeResources> <excludeResource>**/*.scala</excludeResource>
+                                  </excludeResources> </configuration> -->
+                    </plugin>
+ 
+                    <plugin>
+                           <groupId>org.eclipse.tycho</groupId>
+                           <artifactId>target-platform-configuration</artifactId>
+                           <version>${tycho.version}</version>
+                           <configuration>
+                                  <environments>
+                                        <environment>
+                                               <os>linux</os>
+                                               <ws>gtk</ws>
+                                               <arch>x86</arch>
+                                        </environment>
+                                        <environment>
+                                               <os>linux</os>
+                                               <ws>gtk</ws>
+                                               <arch>x86_64</arch>
+                                        </environment>
+                                        <environment>
+                                               <os>win32</os>
+                                               <ws>win32</ws>
+                                               <arch>x86</arch>
+                                        </environment>
+                                        <environment>
+                                               <os>win32</os>
+                                               <ws>win32</ws>
+                                               <arch>x86_64</arch>
+                                        </environment>
+                                        <environment>
+                                               <os>macosx</os>
+                                               <ws>cocoa</ws>
+                                               <arch>x86_64</arch>
+                                        </environment>
+                                  </environments>
+                           </configuration>
+                    </plugin>
+             </plugins>
+       </build>
 </project>
